# AirQuality

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
scripts/: animate.py  deploy.sh  extract-ufp-surface.py  fetch-archive.sh  preprocess.py
src/: i18n.rs  lib.rs
src/components/: chart.rs  controls.rs  export.rs  info.rs  map.rs  mod.rs  ufp.rs
src/content/: air-quality-limits-en.html  links-en.html  links-fr.html  rsqa-en.html  rsqa-fr.html  rsqa-methods-en.html  rsqa-methods-fr.html
src/data/: loader.rs  mod.rs  pollutants.rs  types.rs
static/: style.css
static/data/: iqa-dominance.json  map-stats-detailed.json  map-stats.json  meta.json  stations.json  ufp-surface.json
static/data/series-daily/: station-1.json  station-103.json  station-12.json  station-13.json  station-17.json  station-19.json  station-21.json  station-23.json  station-28.json  station-29.json  station-3.json  station-31.json  station-49.json  station-50.json  station-55.json  station-6.json  station-60.json  station-61.json  station-63.json  station-66.json  station-68.json  station-7.json  station-80.json  station-99.json
static/data/series-profiles/: station-1.json  station-103.json  station-12.json  station-13.json  station-17.json  station-19.json  station-21.json  station-23.json  station-28.json  station-29.json  station-3.json  station-31.json  station-49.json  station-50.json  station-55.json  station-6.json  station-60.json  station-61.json  station-63.json  station-66.json  station-68.json  station-7.json  station-80.json  station-99.json
