[package]
name = "airquality"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Location",
    "History",
    "Storage",
    "Document",
    "Element",
    "HtmlDivElement",
    "Node",
    "NodeList",
    "DomRect",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "TouchEvent",
    "TouchList",
    "Touch",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ResizeObserver",
    "HtmlImageElement",
    "ImageData",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCache",
    "Response",
    "Headers",
    "console",
    "Performance",
    "XmlSerializer",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
    "SvgElement",
    "SvgsvgElement",
    "Clipboard",
    "ClipboardItem",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
chrono-tz = "0.10"
gloo-net = { version = "0.6", features = ["http"] }
futures = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
